# watcher

./: .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  SMS_SETUP.md  check_sms_limits.sh  check_sms_usage.py  claude.md  coverage_tracker.py  debug_sms.py  generate_coverage_badge.py  index.html  integration_tests.py  nohup.out  pyproject 2.toml  pyproject.toml  pytest 2.ini  pytest.ini  readme.md  requirements.txt  sample.env  set_sms_config.sh  sms_config_example.sh  sms_notifier.py  test_sms_notifications.py  test_sms_now.py  test_textbelt.py  test_twilio_notifier.py  test_url_watcher.py  twilio_notifier.py  url_watcher.py
.github/workflows/: ci.yml  coverage-guard.yml  test.yml
cloudformation/: deploy.sh  sns-setup.yaml
docs/: API 2.md  API.md  CLAUDE.md  DEPLOYMENT.md  EXAMPLES.md  MULTI_URL_GUIDE.md  TESTING.md  urls.json
examples/: api_monitoring.json  basic_monitoring.json  my_favorites.json  website_monitoring.json
src/: clicksend_sms_notifier.py  coverage_tracker.py  integration_tests.py  multi_url_watcher.py  sms_notifier.py  url_watcher.py
src/test/: SMS_TESTING_GUIDE.md  index.html  test_clicksend_setup.py  test_clicksend_sms_notifier.py  test_countdown.py  test_multi_url_watcher.py  test_sms_diff.py  test_sms_integration.py  test_sms_notifications.py  test_textbelt.py  test_url_watcher.py
