[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | venv
    | _build
    | buck-out
    | build
    | dist
    | htmlcov
  )/
)
'''

[tool.coverage.run]
source = ["."]
omit = [
    "venv/*",
    "test_*",
    "*/venv/*", 
    "*/test_*",
    "coverage_tracker.py",
    "integration_tests.py",
    "generate_coverage_badge.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.pytest.ini_options]
addopts = "--cov=. --cov-report=html --cov-report=term-missing"
testpaths = ["."]
python_files = ["test_*.py"]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"